# FroboMind

./: direction.txt  let_have_fun  task1.txt  task1_left.txt  task1_right.txt  task2.txt  test_of_between_length.csv
Bagfiles/: 2012-03-31-11-02-49.bag  2012-03-31-11-04-32.bag  2012-03-31-11-25-59.bag  2012-03-31-11-26-56.bag  2012-03-31-11-29-03.bag  2012-03-31-11-29-46.bag  2012-04-12-11-12-39.bag  Odometri_test_around itself.csv  test1.csv  test3.csv  test4.csv  test_of_between_length.csv
Bagfiles/020412/: 2012-04-03-09-42-06.bag  2012-04-03-09-42-44.bag  2012-04-03-09-43-20.bag  2012-04-03-09-43-58.bag  2012-04-03-09-44-31.bag  2012-04-03-09-45-05.bag
Bagfiles/020412/CSVs/: test1_gyro.csv  test1_odo.csv  test2_gyro.csv  test2_odo.csv  test3_gyro.csv  test3_odo.csv  test4_gyro.csv  test4_odo.csv  test5_gyro.csv  test5_odo.csv  test6_gyro.csv  test6_odo.csv
fmActuators/: CMakeLists.txt  manifest.xml
fmActuators/src/Topcon_AES25/: AES-25_electric_steering.cpp  AES-25_electric_steering.h  AES-25_node.cpp
fmBSP/: CMakeLists.txt
fmBSP/src/: pololu.cpp  pololu_motor_controller.cpp  pololu_motor_controller.h  pololu_motor_controller_node.cpp
fmBSP/src/pololu_motor_controller/: pololu_motor_controller.cpp  pololu_motor_controller_node.cpp
fmCSP/: CMakeLists.txt
fmCSP/src/pololu_motor_controller/: pololu_motor_controller.cpp  pololu_motor_controller.h
fmControllers/: CMakeLists.txt
fmControllers/src/motor_controller/: motor_controller.cpp  motor_controller.h  motor_controller_node.cpp  pid_regulator.cpp  pid_regulator.h
fmControllers/src/nav_controllers/in_row_nav/: in_row_nav.cpp  in_row_nav.h  in_row_nav_node.cpp  pid_regulator.cpp
fmControllers/src/path_controller/: Path_Controller.cpp  Path_Controller.h  Path_Controller_Node.cpp
fmCore/: nav.vcg
fmCore/config/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
fmCore/launch/: 1wii_expirement.launch  TEST.launch  erratic_mobile_base.launch  imu_alone.launch  joystick_test.launch  lidar.launch  lidar_navigation.launch  lol.launch  odo_test.launch  p.launch  particlefilter.launch  sim_test.launch  sim_warhorse.launch  slam.launch  task1.launch  task2.launch  test.launch  test2.launch  warhorse.launch  warhorse2.launch  warhorse_no_navigation.launch  warhorse_old.launch  webcam.launch  wii_expirement.launch
fmCore/maps/: testmap.yaml  testmap2.yaml
fmDecisionMakers/: CMakeLists.txt  manifest.xml
fmDecisionMakers/src/mission_control/: mission_control.cpp  mission_control.h  mission_control_node.cpp
fmExtractors/: CMakeLists.txt
fmExtractors/src/: twiststamped_to_twist.py
fmExtractors/src/global_pose_extractors/: sparkfun_razor_imu.py
fmExtractors/src/imu_data_extractors/: imu_ypr_extractor.cpp  nr3.h
fmExtractors/src/lidar_feature_extractors/lidar_inrow_vehicle_detect/: inrow_vehicle_detect_node.cpp  inrow_vehicle_detector.cpp  inrow_vehicle_detector.h  particle_filter.cpp  particle_filter.h
fmExtractors/src/lidar_feature_extractors/lidar_obstacle_avoidance_and_navigator/: lidar_nav_node.cpp  lidar_navigator.cpp  lidar_navigator.h
fmExtractors/src/local_pose_extractors/: gtps_extractor.py
fmExtractors/src/odometry_position_extractor/: gtps_extractor.py  odometry_position_extractor.cpp
fmHMI/: CMakeLists.txt  joy_node.cpp  manifest.xml
fmHMI/include/diagnostic_msgs/: DiagnosticArray.h  DiagnosticStatus.h  KeyValue.h
fmHMI/src/: joystick_velocity.cpp  keyboard_velocity.cpp  wiimote_to_twist.cpp
fmHMI/src/wii_state/: wii_state.cpp  wii_state.h  wii_state_node.cpp
fmKinematics/: CMakeLists.txt  manifest.xml
fmMsgs/msg/: Joy.msg  Vector3.msg  battery_power.msg  blocked_row.msg  desired_speed.msg  gtps.msg  heading_order.msg  ir_distance.msg  kalman_output.msg  motor_power.msg  nav_points.msg  navigation_specifications.msg  odometry.msg  path.msg  row_nav_allow.msg  vehicle_coordinate.msg  vehicle_position.msg  warhorse_state.msg  web.msg  ypr.msg
fmPointsMap/: CMakeLists.txt  mainpage.dox  manifest.xml
fmPointsMap/src/: fmSensor.cpp  points_map_node.cpp
fmPointsMap/src/navigation/: Calcul.h  Destination.cpp  Destination.h  Map.cpp  Map.h  Navigation.cpp  Navigation.h  Navigation_routine.cpp  Navigation_update.cpp  Point.cpp  Point.h  Road.cpp  Road.h
fmProcessors/: CMakeLists.txt  manifest.xml
fmProcessors/src/mapping/: mapping.cpp  mapping.h  mapping_node.cpp
fmProcessors/src/state_estimators/: Gyro_Odo_Fusion_Kalman_node.py  gtps_gyro_fusion.py  sparkfun_razor_imu.py
fmSensors/: CMakeLists.txt
fmSensors/include/neato_lidar_driver/: neato_lidar_driver.h
fmSensors/src/global_sensors/: SparkFun9DOF.cpp
fmSensors/src/local_sensors/: gtps.py  neato_lidar_driver.cpp  neato_lidar_node.cpp
fmSensors/src/odometry_feedback/: GTPS_response.cpp  GTPS_response.h  corobot_wheel_feedback.cpp  corobot_wheel_feedback.h  corobot_wheel_feedback_node.cpp  gtps.py  gtps_service.cpp  phidget_encoder_node.cpp
fmSensors/src/system_feedback/: phidget_888_node.cpp
fmSensors/srv/: GTPS.srv
fmSensors/srv_gen/cpp/include/fmSensors/: GTPS.h
fmSensors/srv_gen/lisp/: GTPS.lisp  _package.lisp  _package_GTPS.lisp  fmSensors-srv.asd
fmTools/: CMakeLists.txt
keyboard_listener/: mainpage.dox  manifest.xml
keyboard_listener/src/: listener.py  talker.py
misc/: LRS_demo.vcg  particle.vcg
